--- a/redditlsa/templates/base.html
+++ b/redditlsa/templates/base.html
@@ -34,16 +34,16 @@
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="{% url 'algebra' %}?sub0=The_Donald&op0=minus&sub1=politics">Reddit LSA</a>
+    <a class="navbar-brand" href="{% url 'map' %}?insubs=Feminism&insubs=politics&insubs=altright&insubs=antivax&outsubs=hillaryclinton&outsubs=SandersForPresident&outsubs=The_Donald&outsubs=GaryJohnson&outsubs=jillstein&method=optimal">Reddit LSA</a>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link {% if view == 'algebra' %} active {% endif %}"
-                   href="{% url 'algebra' %}?sub0=The_Donald&op0=minus&sub1=politics">Algebra</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link {% if view == 'map' %} active {% endif %}"
                    href="{% url 'map' %}?insubs=Feminism&insubs=politics&insubs=altright&insubs=antivax&outsubs=hillaryclinton&outsubs=SandersForPresident&outsubs=The_Donald&outsubs=GaryJohnson&outsubs=jillstein&method=optimal">Maps</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if view == 'algebra' %} active {% endif %}"
+                   href="{% url 'algebra' %}?sub0=The_Donald&op0=minus&sub1=politics">Algebra</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link {% if view == 'about' %} active {% endif %}"
