Fix default URL bug not showing method and fix bug where query parameter wasn't working on the maps page

--- a/redditlsa/templates/map.html
+++ b/redditlsa/templates/map.html
@@ -26,7 +26,7 @@
                         let outsubs = $("#outsubs").select2("val");
                         let ignore = insubs.concat(outsubs);
                         return {
-                            q: params.term,
+                            query: params.term,
                             ignore: ignore
                         };
                     },
